<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="100dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/category_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Title"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:paddingLeft="15dp"
        android:fontFamily="@font/nunito_bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/category_post_num_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/posts"
                android:textColor="@color/blueText"
                android:padding="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_semibold"/>
            <TextView
                android:id="@+id/category_follower_num_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/blueText"
                android:fontFamily="@font/nunito_semibold"/>
        </LinearLayout>

        <Button
            android:id="@+id/category_un_fallow_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/buttonshape_white_rounded"
            />
    </LinearLayout>


</LinearLayout>