<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_post_fragment">
    <!--Create post bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:paddingHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:id="@+id/create_post_bar"
        >

        <Button
            android:id="@+id/create_post_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/create_a_new_post"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@android:color/black"/>
        <Button
            android:id="@+id/my_post_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/show_my_posts"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/grayText"/>
    </LinearLayout>
    <!--CREATE A NEW POST-->
    <ScrollView
        android:id="@+id/create_post_scrll_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/create_post_bar"
        android:layout_marginBottom="60dp"
        android:layout_centerVertical="true"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/new_post_ly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="@string/link"
                android:textColor="@color/black_text"
                android:layout_marginBottom="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/ed_bg"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/create_post_link_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/put_link_here"
                    android:textColor="@color/black_text"
                    android:fontFamily="@font/nunito_extralight"
                    android:inputType="textNoSuggestions"/>

                <Button
                    android:id="@+id/create_post_edit_btn"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/buttonshape_white_rounded"
                    android:text="@string/edit" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extralight"
                android:gravity="center"
                android:text="@string/or_write_yourself"
                android:textColor="@color/black_text"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="@color/black_text"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/create_post_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ed_bg"
                android:hint="@string/write_here"
                android:fontFamily="@font/nunito_extralight"
                android:textColor="@color/black_text"
                android:inputType="textMultiLine"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="@color/black_text"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/create_post_description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ed_bg"
                android:hint="@string/write_here"
                android:fontFamily="@font/nunito_extralight"
                android:textColor="@color/black_text"
                android:inputType="textMultiLine"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="@string/featured_image"
                android:textColor="@color/black_text"
                android:layout_marginBottom="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_bg"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/create_post_content_pic_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>

                <Button
                    android:id="@+id/create_post_add_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/buttonshape_white_rounded"
                    android:text="@string/add" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/send_blue_bg"
                android:padding="5dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/create_post_region_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/nunito_semibold"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="8dp"
                        android:text="Region"
                        android:textColor="@color/white" />

                    <ImageButton
                        android:id="@+id/create_post_region_Ib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_arrow_down"
                        android:tint="@color/white" />
                </RelativeLayout>

                <ListView
                    android:id="@+id/create_post_region_lv"
                    android:layout_width="match_parent"
                    android:layout_height="168dp"
                    android:visibility="gone"
                    android:scrollbars="vertical"
                    android:paddingVertical="16dp"
                    android:nestedScrollingEnabled="true"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/create_post_ecosystem_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/nunito_semibold"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="8dp"
                        android:text="Ecosystem"
                        android:textColor="@color/white" />

                    <ImageButton
                        android:id="@+id/create_post_ecosystem_Ib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_arrow_down"
                        android:tint="@color/white" />
                </RelativeLayout>
                <ListView
                    android:id="@+id/create_post_ecosystem_lv"
                    android:layout_width="match_parent"
                    android:layout_height="168dp"
                    android:visibility="gone"
                    android:scrollbars="vertical"
                    android:paddingVertical="16dp"
                    android:nestedScrollingEnabled="true"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/create_post_category_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/nunito_semibold"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="8dp"
                        android:text="Category"
                        android:textColor="@color/white" />

                    <ImageButton
                        android:id="@+id/create_post_category_Ib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_arrow_down"
                        android:tint="@color/white" />
                </RelativeLayout>
                <ListView
                    android:id="@+id/create_post_category_lv"
                    android:layout_width="match_parent"
                    android:layout_height="168dp"
                    android:visibility="gone"
                    android:scrollbars="vertical"
                    android:paddingVertical="16dp"
                    android:nestedScrollingEnabled="true"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/create_post_send_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/send_bg"
                android:text="@string/send"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
    <!--SHOW MY POSTS-->


    <FrameLayout
        android:id="@+id/my_posts_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="56dp"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_contents_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:scrollbars="vertical"/>

        <TextView
            android:id="@+id/my_posts_no_content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_content"
            android:visibility="gone"
            android:textSize="26sp" />

    </FrameLayout>

</RelativeLayout>